# muppet-labs

./: .gitignore  AGENTS.md  BUILDOUT.md  CONTEXT.md  DEPLOY.md  Makefile  PORTFOLIO.md  README.md  The capital of France is Paris.  What is the capital of France?  claude.md  docker-compose.yml  muppet-labs  pyproject.toml  |-- CONTEXT.md
projects/case-queue/ai_reviewer/: .env.example  main.py  pyproject.toml  ruff.toml
projects/case-queue/api/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  ruff.toml
projects/error-hide-seek/: .env.example  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
projects/error-hide-seek/alembic/: env.py
projects/error-hide-seek/error_hide_seek/: config.py  db.py  models.py
projects/error-hide-seek/results/: exp2_review_protocol.md  findings.md  human_review.md
projects/error-hide-seek/tests/: conftest.py  test_agents.py  test_api.py  test_arxiv.py  test_scoring.py
projects/error-hide-seek/web/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  wrangler.toml
projects/eval-harness/: .gitignore  README.md  models.yaml  pyproject.toml  ruff.toml
projects/eval-harness/docs/: one-pager.md
projects/eval-harness/eval/: cli.py  config.py  db.py  drift.py  models.py  rubrics.py  runner.py  scorer.py
projects/eval-harness/rubrics/: harmlessness.yaml  refusal_detection.yaml  truthfulness.yaml
projects/eval-harness/runs/: README.md  advbench-baseline-diff.json
projects/eval-harness/test_cases/: example_safety.yaml
projects/eval-harness/tests/: conftest.py  test_datasets.py  test_db.py  test_drift.py  test_models.py  test_runner.py  test_scorer.py
projects/gridiron/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
projects/gridiron/alembic/: env.py
projects/gridiron/analytics/: .gitignore  dbt_project.yml
projects/gridiron/gridiron/: config.py  database.py  models.py  orchestrator.py
projects/gridiron/resources/: CONTEXT.md  design-doc.md  dev-sim-guide.md  nafca-brand-guide.md  teams-original.md  writing-voice.md
projects/gridiron/scripts/: assign_broadcast_slots.py  build_name_corpus.py  generate_colors.py  seed_programs.py  seed_roster.py  seed_schedule.py  seed_staff.py  sim.py  sim_sandbox.py  verify_colors.py
projects/gridiron/tests/: conftest.py
projects/gridiron/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
projects/llm-safety-monitor/: .env.example  .gitignore  BACKLOG.md  Makefile  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
projects/llm-safety-monitor-training/: .env.example  .gitignore  compare_baselines.py  pyproject.toml  ruff.toml  smoke_modernbert.py
projects/llm-safety-monitor-training/benchmarks/: baseline-comparison.json  baseline-comparison.md
projects/llm-safety-monitor-training/llm_safety_training/: datasets.py  evaluate.py  train.py  train_pair.py  train_prompt.py  train_taxonomy.py
projects/llm-safety-monitor-training/tests/: test_datasets.py  test_evaluate.py  test_train_pair.py  test_train_prompt.py  test_train_taxonomy.py
projects/llm-safety-monitor/alembic/: env.py
projects/llm-safety-monitor/llm_safety_monitor/: config.py  producer.py  seed_demo.py  types.py
projects/llm-safety-monitor/scripts/: live_claude_producer.py
projects/llm-safety-monitor/tests/: conftest.py  test_api.py  test_consumers.py  test_escalation.py  test_producer.py
projects/llm-safety-monitor/web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  wrangler.toml
projects/local-harness/: Cargo.toml  PLAN.md  harness.toml.example
projects/local-harness/eval/: classified.jsonl  classified_2model.jsonl  classify.py  corpus.json  pressure_corpus.py  pressure_tasks.json  raw_outputs.jsonl  raw_outputs_2model.jsonl  report.py  report_pressure.py  run_eval.py  run_pressure.py
projects/local-harness/src/: cli.rs  config.rs  logger.rs  main.rs  proxy.rs  upstream.rs
projects/moderation-dashboard/: .env.example  ISSUES.md  Makefile  README.md  SUMMARY.md  alembic.ini  docker-compose.yml  project_learnings.md  pyproject.toml  ruff.toml
projects/moderation-dashboard/alembic/: env.py
projects/moderation-dashboard/dbt/: dbt_project.yml  profiles.yml
projects/moderation-dashboard/moderation_dashboard/: config.py  producer.py  seed_sim.py  types.py
projects/moderation-dashboard/nginx/: Dockerfile  nginx.conf
projects/moderation-dashboard/scripts/: bsky_stream.py  demo_stream.py
projects/moderation-dashboard/tests/: conftest.py  test_admin.py  test_anomaly.py  test_api.py  test_cases.py  test_consumers.py  test_producer.py
projects/moderation-dashboard/web/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
projects/moderation-stream/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
projects/moderation-stream/data/: train.csv
projects/moderation-stream/docs/: technical-summary.md
projects/moderation-stream/moderation_stream/: config.py  producer.py  types.py
projects/moderation-stream/tests/: conftest.py  test_api.py  test_consumers.py  test_producer.py
projects/red-team-platform/: .env.example  ATTACK_PLAN.md  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml  ruff.toml
projects/red-team-platform/alembic/: env.py
projects/red-team-platform/benchmarks/: results.md
projects/red-team-platform/tests/: conftest.py  test_api.py  test_attack.py  test_bias.py  test_cluster.py  test_seed.py
projects/red-team-platform/web/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  wrangler.toml
projects/toxicity-classifier-finetuned/: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
projects/toxicity-classifier-finetuned/docs/: distilbert-finetuning-experiment.md
projects/toxicity-classifier-finetuned/notebooks/: colab_training.ipynb
projects/toxicity-classifier-finetuned/tests/: conftest.py  test_data.py  test_evaluate.py  test_train.py
(+695 files in other folders)
