[project]
name = "error-hide-seek"
version = "0.1.0"
description = "Adversarial red-team / blue-team evaluation platform measuring human uplift on AI safety abstract error detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.107.1",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[project.scripts]
fetch-corpus = "error_hide_seek.corpus.fetch:main"
plant-errors = "error_hide_seek.agents.plant:main"
score        = "error_hide_seek.scoring.scorer:score_cli"
api          = "error_hide_seek.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["error_hide_seek"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-httpserver>=1.1.5",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]
