[project]
name = "eval-harness"
version = "0.1.0"
description = "CLI evaluation harness for LLM behaviour testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "datasets>=4.8.5",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.4",
]

[project.scripts]
eval = "eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-httpserver>=1.1.5",
    "ruff>=0.15.15",
]
