[project]
name = "llm-safety-monitor-training"
version = "0.1.0"
description = "Training scripts for LLM safety classifiers (pair, prompt, taxonomy)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=5.0.0",
    "scikit-learn>=1.9.0",
    "sentencepiece>=0.2.0",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]

[project.scripts]
train-pair = "llm_safety_training.train_pair:main"
train-prompt = "llm_safety_training.train_prompt:main"
train-taxonomy = "llm_safety_training.train_taxonomy:main"
evaluate = "llm_safety_training.evaluate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_safety_training"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
