[project]
name = "llm-safety-monitor"
version = "0.1.0"
description = "Streaming LLM safety classification platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "confluent-kafka>=2.14.2",
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
producer = "llm_safety_monitor.producer:main"
consumers = "llm_safety_monitor.consumers.runner:main"
api = "llm_safety_monitor.api.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_safety_monitor"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
