[package]
name = "local-harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lh"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = "0.7"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
clap       = { version = "4", features = ["derive", "env"] }
toml       = "0.8"
chrono     = { version = "0.4", features = ["serde"] }
bytes      = "1"
anyhow     = "1"
