[project]
name = "moderation-stream"
version = "0.1.0"
description = "Kafka-based content moderation event streaming platform with five-model comparison"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "detoxify>=0.5.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.scripts]
moderation-stream-producer            = "moderation_stream.producer:main"
moderation-stream-distilbert          = "moderation_stream.consumers.distilbert:main"
moderation-stream-roberta             = "moderation_stream.consumers.roberta:main"
moderation-stream-detoxify            = "moderation_stream.consumers.detoxify_consumer:main"
moderation-stream-finetuned-distilbert = "moderation_stream.consumers.finetuned:main_distilbert"
moderation-stream-finetuned-roberta   = "moderation_stream.consumers.finetuned:main_roberta"
moderation-stream-api                 = "moderation_stream.api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moderation_stream"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
