[project]
name = "toxicity-classifier-finetuned"
version = "0.1.0"
description = "Fine-tuning pipeline for DistilBERT and RoBERTa on Jigsaw Toxic Comments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "typer>=0.26.7",
]

[project.scripts]
train = "toxicity_classifier.cli:run_train"
evaluate = "toxicity_classifier.cli:run_evaluate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toxicity_classifier"]

[tool.uv]
package = true


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
