[project]
name = "ai-reviewer"
version = "0.1.0"
description = "AI-powered case reviewer for the case-queue trust & safety tool"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.105.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "typer>=0.26.5",
]

[project.scripts]
case-reviewer = "ai_reviewer.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_reviewer"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
